--- a/src/components/Btn/Btn.module.scss
+++ b/src/components/Btn/Btn.module.scss
@@ -9,6 +9,7 @@
   font-size: var(--text-size);
   text-align: center;
   line-height: 1.2;
+  
 }
 
 .start {
@@ -16,6 +17,7 @@
   border-radius: 30px;
   height: 43px;
   width: 210px;
+  margin: 0 auto;
 }
 
 .login {
