--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,25 +1,29 @@
 // /* сюди імпортуємо компоненти лого, навігацію та/або юзер інфо*/
 .header {
-  align-items: center;
-  margin: 20px;
-  display: flex;
+  width: 100%;
+  padding: 20px 20px 16px 20px;
   border-bottom: 2px solid #e0e0e0;
-}
-.navigations__list {
-  padding-left: 0px;
   display: flex;
-  margin-right: 15px;
-  margin-left: auto;
-  margin-top: 2px;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.navigations__item {
-  margin-right: 15px;
-  padding-left: 0px;
 
-  font-style: normal;
-  font-weight: bold;
+.decoration {
+  margin-left: 32px;
+  display: block;
+}
+.navigation__list {
+  display: flex;
+  gap: 14px;
+}
+.navigation__item {
   font-size: 14px;
+  font-weight: bold;
+  font-weight: 700;
+  line-height: 1.22;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
+  padding-top: 18px;
 }
 .default {
   color: #9b9faa;
@@ -27,31 +31,44 @@
 .active {
   color: black;
 }
-.decoration {
-  display: none;
-}
 
 @media screen and (min-width: 767px) {
-}
-@media screen and (min-width: 1280px) {
   .header {
+    padding: 20px 32px 16px 32px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .navigation__list {
+    display: flex;
+    justify-content: flex-end;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1279px) {
+  .header {
+    padding: 80px 0 16px 16px;
     border-bottom: none;
-    // align-items: flex-end;
+    display: flex;
+    justify-content: flex-start;
   }
   .decoration {
-    margin-right: 20px;
     margin-left: 20px;
+    margin-top: 41px;
     display: block;
-    height: 32px;
-    border: 1px solid #e0e0e0;
-    margin-bottom: 7.5px;
+    border-left: 2px solid #e0e0e0;
+    text-decoration: none;
   }
-  .navigations__list {
+  .navigation__list {
     display: flex;
-    justify-content: center;
-    flex-direction: row;
-    margin-bottom: 15px;
-    margin-right: auto;
-    margin-left: 0;
+    margin-top: -5px;
+    margin-left: 20px;
+    gap: 24px;
   }
+  //   ::after {
+  //     content: '';
+  //     background-color: #e0e0e0;
+  //     height: 2px;
+  //     display: block;
+  //   }
 }
