--- a/src/components/DailyCaloriesForm/DailyCaloriesForm.module.scss
+++ b/src/components/DailyCaloriesForm/DailyCaloriesForm.module.scss
@@ -1,128 +1,252 @@
 @import '../../styles/base/container';
 @import '../../styles/utils/variables';
 
-
-.container {
+.caloriesForm {
     width: 100%;
-        padding-left: 20px;
-        padding-right: 20px;
-        margin: 0 auto;
+    margin: auto 0;
+    max-width: 900px;
+    padding: 40px 65px 60px 15px;
+    font-family: Verdana, Arial, sans-serif;
 }
 
-.formWrapper {
-    max-width: 240px;
-    padding: 110px 15px 80px 15px;
-    position: relative;
-    z-index: 2;
-    overflow: hidden;
-
-    @media screen and (min-width: 768px) {
-        max-width: 704px;
-        padding: 180px 32px 501px 32px;
-        margin-top: 78px;
-    }
-
-   @media screen and (min-width: 1280px) {
-        padding: 293px 0 214x 16px;
-        max-width: 608px;
-        margin-top: 0;
-    }
+.form_button {
+    margin-left: 50px;
+    text-align: center;
 }
 
-.title {
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 26px;
-        letter-spacing: normal;
-        margin: 0;
-        padding-bottom: 30px;
-        padding-right: 5%;
-
-        @media screen and (min-width: 768px) {
-            font-size: 34px;
-            padding: 0 0 60px 0;
-            }
-        
-     @media screen and (min-width: 1280px) {
-                font-size: 34px;
-                padding: 0 5% 68px 0;
-            }
+.caloriesForm h2 {
+    font-family: Verdana;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 1.4;
+    color: #212121;
+    margin-bottom: 40px;
 }
 
-.form {
-    @media screen and (min-width: 768px) {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-    }
-
-        @media screen and (min-width: 1280px) {
-        width: 83%;
-    }
-}
-
-.input {
+.caloriesForm label {
     display: block;
-    width: 80%;
-    padding: 5px;
-    margin: 0 0 32px 0;
-    border: none;
-    border-bottom: 1px solid gray;
-    background: transparent;
-    outline: transparent;
-    font-weight: 500;
-        font-size: 14px;
-
-    @media screen and (min-width: 768px) {
-            padding: 19px 19px 19px 0;
-            width: 100%;
-        }
-    
-        &:focus {
-            border-bottom: 2px solid black;
-        }
+    padding-top: 5px;
+    height: 25px;
 }
 
-.radio {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-    border: 2px solid gray;
-    outline: none;
-    border-radius: 50%;
-    // -webkit-appearance: none;
-    vertical-align: text-top;
 
-    &:checked {
-        outline: none;
-        // -webkit-appearance: none;
-        border-radius: 50%;
-        border: 2px solid gray;
-    }
-
-    &:checked:after {
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        position: relative;
-        background-color: black;
-        content: '';
-        display: block;
-        visibility: visible;
-    }
-}
-
-.radiogroup {
-    width: 80%;
-    justify-content: space-between;
-    padding-top: 10px;
-}
-
-.input::placeholder,
-.label {
-    color: gray;
+.caloriesForm .labelText {
+    font-family: Verdana;
+    font-weight: bold;
+    cursor: text;
     font-size: 14px;
+    line-height: 1.2;
+    color: #9b9faa;
+    transform: translateY(-20px);
+    transition: all 0.3s;
+}
+
+.caloriesForm input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #e0e0e0;
+    background-color: transparent;
+    outline: 0;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    color: #9b9faa;
+    transition: all 0.3s;
+}
+
+.caloriesForm input:focus~.labelText {
+    font-size: 12px;
+    transform: translateY(-35px);
+}
+
+.caloriesForm input:valid~.labelText {
+    font-size: 12px;
+    transform: translateY(-35px);
+}
+
+.labelContainer {
+    margin-bottom: 15px;
+}
+
+.caloriesForm input::-webkit-scrollbar-thumb {
+    color: transparent;
+}
+
+.formContainerF {
+    margin-bottom: 30px;
+}
+
+.formContainerS {
+    margin-bottom: 30px;
+}
+
+.caloriesFormErrorContainer {
+    height: 19px;
+}
+
+.caloriesFormError {
+    font-family: Verdana;
+    font-weight: normal;
+    font-size: 0.75rem;
+    line-height: 1.6;
+    color: red;
+}
+
+.radioButtonContainer {
+    display: block;
+    position: relative;
+    margin-top: 20px;
+    height: auto;
+    width: 240px;
+}
+
+.radioButtonContainer h3 {
+    font-family: Verdana;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.2;
+    color: #9b9faa;
+}
+
+.radioButtonList {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.radioButtonList li {
+    color: #9b9faa;
+    display: block;
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 60px;
+}
+
+.radioButtonList li input[type='radio'] {
+    position: absolute;
+    visibility: hidden;
+}
+
+.radioButtonList li label {
+    display: block;
+    position: relative;
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: normal;
+    letter-spacing: 0.04em;
+    padding: 10px 10px 25px 30px;
+    margin: 17px auto;
+    height: 10px;
+    z-index: 0;
+    cursor: pointer;
+    transition: all 0.25s linear;
+}
+
+.radioButtonList li:hover label {
+    font-weight: bold;
+    color: #fc842d;
+}
+
+.radioButtonList li .check {
+    display: block;
+    position: absolute;
+    border: 1px solid #e0e0e0;
+    border-radius: 100%;
+    height: 20px;
+    width: 20px;
+    top: 25px;
+    left: 5px;
+    z-index: -1;
+    transition: border 0.25s linear;
+}
+
+.radioButtonList li:hover .check {
+    border: 1px solid #fc842d;
+}
+
+.radioButtonList li .check::before {
+    display: block;
+    position: absolute;
+    content: '';
+    border-radius: 100%;
+    height: 10px;
+    width: 10px;
+    top: 4px;
+    left: 4px;
+    margin: auto;
+}
+
+input[type='radio']:checked~.check {
+    border: 1px solid #e0e0e0;
+}
+
+input[type='radio']:checked~.check::before {
+    background: #fc842d;
+}
+
+input[type='radio']:checked~label {
+    font-weight: bold;
+    color: #fc842d;
+}
+
+@media (min-width: 768px) {
+    .caloriesForm {
+        height: auto;
+        min-height: 44vh;
+        width: 100%;
+        padding: 70px 70px 60px 80px;
+    }
+
+    .form_button {
+        margin-left: 0;
+        text-align: right;
+    }
+
+    .formContainerMain {
+        display: flex;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .formContainerLeft,
+    .formContainerRight {
+        width: 50%;
+    }
+
+    .labelContainer {
+        margin-bottom: 25px;
+    }
+
+    .caloriesForm input {
+        width: 85%;
+    }
+
+    .caloriesForm h2 {
+        font-size: 30px;
+        line-height: 1.2;
+    }
+
+    .radioButton:not(:last-child) {
+        margin-right: 16px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .caloriesForm {
+        height: auto;
+        min-height: auto;
+        width: 745px;
+        padding: 80px 25px 110px 115px;
+    }
+
+    .formContainerMain {
+        max-width: 745px;
+    }
+
+    .caloriesForm h2 {
+        font-size: 34px;
+    }
 }
