--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -13,11 +13,14 @@ p {
   padding: 0;
 }
 
-ul,
-ol {
+ul {
   margin: 0;
   padding-left: 0;
   list-style: none;
+}
+ol{
+  margin: 0;
+  padding-left: 0;
 }
 
 img {
