--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
@@ -3,7 +3,10 @@
     display: flex;
     justify-content: center;
 }
-
+.icon {
+    width: 20px;
+    height:20px;
+}
 .Form {
     padding-top: 80px;
     padding-left: 20px;
