--- a/src/components/SideBar/Sidebar.module.css
+++ b/src/components/SideBar/Sidebar.module.css
@@ -10,19 +10,18 @@
     height: 100%;
     z-index: -1;
     top: 0;
+    right: 0;
     box-shadow: 40px 1px 55px #e2e2e2;
   }
 }
 
-.Back {}
 
 .SidebarWrap {
   width: 100vw;
   padding: 40px 20px;
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  align-items: center;
+  gap: 60px;
 }
 
 @media screen and (min-width: 768px) {
@@ -50,9 +49,8 @@
   .SidebarWrap {
     width: 588px;
     height: auto;
-    padding: 292px 140px 166px 0;
+    padding: 292px 123px 0 106px;
     flex-direction: column;
-    align-items: center;
     gap: 60px;
     background-image: url(./sidebarBg/sidebar-leaves-desk-1x.png);
 
@@ -70,7 +68,6 @@
 }
 
 .SidebarTitle {
-  margin-bottom: 30px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.2;
@@ -79,6 +76,7 @@
 }
 
 .SidebarText {
+  margin-top: 20px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.2;
@@ -89,6 +87,7 @@
 .SidebarList {
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
   gap: 16px;
   width: 270px;
 }
