--- a/src/components/SideBar/Sidebar.module.css
+++ b/src/components/SideBar/Sidebar.module.css
@@ -1,6 +1,10 @@
 .SidebarSection {
   width: 100%;
   background-color: #F0F1F3;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+
 }
 
 @media screen and (min-width: 1280px) {
@@ -26,7 +30,7 @@
 
 @media screen and (min-width: 768px) {
   .SidebarWrap {
-    padding: 80px 32px;
+    padding: 91px 87px;
     flex-direction: row;
     align-items: flex-start;
     gap: 96px;
@@ -68,6 +72,7 @@
 }
 
 .SidebarTitle {
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.2;
@@ -76,7 +81,6 @@
 }
 
 .SidebarText {
-  margin-top: 20px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.2;
@@ -87,7 +91,6 @@
 .SidebarList {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
   gap: 16px;
   width: 270px;
 }
