commit styles diary

--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
@@ -7,15 +7,43 @@
     width: 20px;
     height:20px;
 }
+// .Form {
+//     padding-top: 80px;
+//     padding-left: 20px;
+//     padding-right: 20px;
+
+//     @media screen and (min-width: 768px) {
+//         display: flex;
+//         align-items: center;
+//         margin-top: 53px;
+//         padding-top: 0;
+//         padding-left: 32px;
+//         padding-right: 0;
+//     }
+
+//     @media screen and (min-width: 1280px) {
+//         margin-top: 60px;
+//         padding-left: 16px;
+//     }
+
+//     align-items: center;
+// }
+
 .Form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start !important;
     padding-top: 80px;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 20px !important;
+    width: calc(100% - 517px);
+
+    margin-bottom: 69px;
 
     @media screen and (min-width: 768px) {
-        display: flex;
+
         align-items: center;
-        margin-top: 53px;
+        margin-top: 100px;
         padding-top: 0;
         padding-left: 32px;
         padding-right: 0;
@@ -26,7 +54,13 @@
         padding-left: 16px;
     }
 
-    align-items: center;
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        width: 100%;
+        margin-top: 80px;
+        margin-bottom: 60px;
+        padding: 0 20px;
+    }
 }
 
 .FieldProduct {
@@ -203,5 +237,20 @@
 .buttonIcon {
     @media screen and (max-width: 767px) {
         display: none;
+    }
+}
+
+// .fieldRow {
+//     display: flex;
+//         flex-direction: row;
+// }
+.fieldRow {
+    display: flex;
+    flex-direction: row;
+    width: 400px;
+
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        width: 100%;
     }
 }
