--- a/src/components/Layout/Burger/Burger.module.scss
+++ b/src/components/Layout/Burger/Burger.module.scss
@@ -1,4 +1,21 @@
-.burger {
+.btn {
   border: none;
   background-color: white;
+  margin-top: 11px;
+  width: 24px;
+  height: 24px;
+}
+// .burger {
+//   width: 24px;
+//   height: 24px;
+// }
+.close {
+  width: 24px;
+  height: 24px;
+  margin-top: -2px;
+}
+@media screen and (min-width: 767px) {
+  .btn {
+    margin-right: 11px;
+  }
 }
