--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -7,10 +7,14 @@
   flex-direction: row;
   justify-content: space-between;
 }
-
+.line {
+  margin-left: 20px;
+  padding-top: 3px;
+  opacity: 0;
+}
 .decoration {
-  margin-left: 32px;
-  display: block;
+  margin-left: 20px;
+  display: flex;
 }
 .navigation__list {
   display: flex;
@@ -40,35 +44,36 @@
   }
   .navigation__list {
     display: flex;
+    flex-direction: row-reverse;
     justify-content: flex-end;
     gap: 24px;
+  }
+  .line {
+    opacity: 0;
   }
 }
 
 @media screen and (min-width: 1279px) {
   .header {
-    padding: 80px 0 16px 16px;
+    padding: 80px 16px 0 16px;
     border-bottom: none;
     display: flex;
     justify-content: flex-start;
   }
+  .line {
+    opacity: 1;
+    padding-top: 41px;
+  }
   .decoration {
     margin-left: 20px;
-    margin-top: 41px;
+    margin-top: 37px;
     display: block;
-    border-left: 2px solid #e0e0e0;
     text-decoration: none;
   }
   .navigation__list {
     display: flex;
-    margin-top: -5px;
-    margin-left: 20px;
+    flex-direction: row;
     gap: 24px;
+    justify-content: space-around;
   }
-  //   ::after {
-  //     content: '';
-  //     background-color: #e0e0e0;
-  //     height: 2px;
-  //     display: block;
-  //   }
 }
