--- a/src/components/ModalMobMenu/ModalMobMenu.module.scss
+++ b/src/components/ModalMobMenu/ModalMobMenu.module.scss
@@ -6,8 +6,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
   top: 80px;
+  z-index: 1;
+  //   transform: translateY(100%);
+  //   transition: transform 250ms ease;
 }
 // .btn {
 //   color: #ffffff;
@@ -35,4 +37,20 @@
   text-transform: uppercase;
   line-height: 1.22;
   letter-spacing: 0.04em;
+}
+.list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
+  gap: 34px;
+}
+
+@media screen and (min-width: 767px) {
+  .list {
+    padding-top: 100px;
+  }
+  .active .default {
+    font-size: 24px;
+  }
 }
