--- a/src/components/UserInfo/UserInfo.module.scss
+++ b/src/components/UserInfo/UserInfo.module.scss
@@ -6,13 +6,18 @@
   font-weight: 700;
   line-height: 1.22;
   letter-spacing: 0.04em;
-  padding-top: 18px;
+  // padding-top: 14px;
   gap: 20px;
+  opacity: 0;
 }
-.decoration {
-  display: flex;
-  padding-right: 20px;
-  border-right: 2px solid #e0e0e0;
+// .decoration {
+//   padding-top: 14px;
+// }
+// .out {
+//   padding-top: 14px;
+// }
+.line {
+  padding-top: 3px;
 }
 .name {
   color: black;
@@ -23,4 +28,44 @@
 }
 .active {
   color: black;
+}
+@media screen and (min-width: 767px) {
+  .navigation__list {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 14px;
+    font-weight: bold;
+    font-weight: 700;
+    line-height: 1.22;
+    letter-spacing: 0.04em;
+    gap: 20px;
+    opacity: 1;
+  }
+
+  .decoration {
+    padding-top: 14px;
+  }
+  .line {
+    padding-top: 3px;
+  }
+  .out {
+    padding-top: 14px;
+  }
+  .name {
+    color: black;
+    text-transform: capitalize;
+  }
+  .default {
+    color: #9b9faa;
+  }
+  .active {
+    color: black;
+  }
+}
+
+@media screen and (min-width: 1279px) {
+  .navigation__list {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
