--- a/src/components/AuthorizationForm/AuthorizationForm.module.scss
+++ b/src/components/AuthorizationForm/AuthorizationForm.module.scss
@@ -1,6 +1,19 @@
 .authorization_form {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  margin: auto 0;
+  max-width: 900px;
+  padding: 40px 15px 0 15px;
+  @media screen and (min-width: 768px) {
+    width: 704px;
+    padding-top: 100px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-top: 267px;
+  }
 }
 
 .authorization__title {
@@ -70,6 +83,12 @@
   background: #fc842d;
   box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
   color: #ffffff;
+
+  &:hover,
+  :focus {
+    background-color: #ea4f0c;
+    border-color: transparent;
+  }
 }
 
 .authorization__link {
@@ -79,4 +98,9 @@
   background: #ffffff;
   border: 2px solid #fc842d;
   color: #fc842d;
+  &:hover,
+  :focus {
+    background-color: var(--btn-text-color);
+    border-color: #ea4f0c;
+  }
 }
