--- a/src/components/UserInfo/UserInfo.module.scss
+++ b/src/components/UserInfo/UserInfo.module.scss
@@ -1,56 +1,56 @@
 .navigation__list {
-  display: none;
-  // justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
   font-size: 14px;
   font-weight: bold;
   font-weight: 700;
   line-height: 1.22;
   letter-spacing: 0.04em;
-  // padding-top: 14px;
   gap: 20px;
-  // opacity: 0;
-}
-// .decoration {
-//   padding-top: 14px;
-// }
-// .out {
-//   padding-top: 14px;
-// }
-.line {
-  padding-top: 3px;
-}
+ 
+  @media screen and (max-width: 767px) {
+    position: absolute;
+    top: 80px;
+    right: 0px; 
+    background-color: #EFF1F3;
+    height: 40px;
+    width: 100%;
+    padding-top: 15px;
+    padding-right: 20px;
+    padding-bottom: 13px;
+    align-items: center;
+    }
+  @media screen and (min-width: 1280px) {
+    position: absolute;
+    top: 131px;
+    right: 40px;
+    }
+  }
+
 .name {
   color: black;
   text-transform: capitalize;
 }
 .default {
   color: #9b9faa;
+  transition: color 300ms linear;
+  &:hover, &:focus{
+    color: black;
+  }
 }
 .active {
   color: black;
 }
-@media screen and (min-width: 767px) {
-  .navigation__list {
-    display: flex;
-    justify-content: flex-end;
-    font-size: 14px;
-    font-weight: bold;
-    font-weight: 700;
-    line-height: 1.22;
-    letter-spacing: 0.04em;
-    gap: 20px;
-    opacity: 1;
-  }
-
-  .decoration {
+@media screen and (min-width: 768px) {
+   .decoration {
     padding-top: 14px;
   }
-  .line {
+   .line {
     padding-top: 3px;
-  }
+  } 
   .out {
     padding-top: 14px;
-  }
+    }
   .name {
     color: black;
     text-transform: capitalize;
@@ -63,9 +63,4 @@
   }
 }
 
-@media screen and (min-width: 1279px) {
-  .navigation__list {
-    display: flex;
-    justify-content: flex-end;
-  }
-}
+
