--- a/src/components/ModalMobMenu/ModalMobMenu.module.scss
+++ b/src/components/ModalMobMenu/ModalMobMenu.module.scss
@@ -8,9 +8,15 @@
   align-items: center;
   top: 80px;
   z-index: 1;
+  transform: translateX(0);
+  transition: transform 250ms ease;
   //   transform: translateY(100%);
-  //   transition: transform 250ms ease;
 }
+.transition {
+  composes: modal;
+  transform: translateX(-100%);
+}
+
 // .btn {
 //   color: #ffffff;
 //   font-size: 18px;
