--- a/src/components/ModalMobMenu/ModalMobMenu.module.scss
+++ b/src/components/ModalMobMenu/ModalMobMenu.module.scss
@@ -9,23 +9,14 @@
   top: 80px;
   z-index: 1;
   transform: translateX(0);
-  transition: transform 250ms ease;
-  //   transform: translateY(100%);
+  transition: transform 450ms ease;
+  //   transform: translateY(0);
 }
 .transition {
   composes: modal;
   transform: translateX(-100%);
 }
 
-// .btn {
-//   color: #ffffff;
-//   font-size: 18px;
-//   font-weight: bold;
-//   font-weight: 700;
-//   text-transform: uppercase;
-//   line-height: 1.22;
-//   letter-spacing: 0.04em;
-// }
 .active {
   color: #ffffff;
   font-size: 18px;
