--- a/src/components/UserInfo/UserInfo.module.scss
+++ b/src/components/UserInfo/UserInfo.module.scss
@@ -9,21 +9,21 @@
   gap: 20px;
  
   @media screen and (max-width: 767px) {
-    position: absolute;
-    top: 80px;
-    right: 0px; 
-    background-color: #EFF1F3;
-    height: 40px;
-    width: 100%;
-    padding-top: 15px;
-    padding-right: 20px;
-    padding-bottom: 13px;
+    // position: absolute;
+    // top: 80px;
+    // right: 0px; 
+    // background-color: #EFF1F3;
+    // height: 40px;
+    // width: 100%;
+    // padding-top: 15px;
+    // padding-right: 20px;
+    // padding-bottom: 13px;
     align-items: center;
     }
   @media screen and (min-width: 1280px) {
-    position: absolute;
+    // position: absolute;
     top: 131px;
-    right: 40px;
+    // right: 40px;
     }
   }
 
