--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
@@ -1,248 +1,236 @@
 .DivCtnterd {
-    padding: 30px 0;
-    display: flex;
-    justify-content: center;
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
 }
 .icon {
-    width: 20px;
-    height:20px;
+  width: 20px;
+  height: 20px;
 }
-// .Form {
-//     padding-top: 80px;
-//     padding-left: 20px;
-//     padding-right: 20px;
-
-//     @media screen and (min-width: 768px) {
-//         display: flex;
-//         align-items: center;
-//         margin-top: 53px;
-//         padding-top: 0;
-//         padding-left: 32px;
-//         padding-right: 0;
-//     }
-
-//     @media screen and (min-width: 1280px) {
-//         margin-top: 60px;
-//         padding-left: 16px;
-//     }
-
-//     align-items: center;
-// }
+.Calendar{
+    display: flex;
+}
 
 .Form {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start !important;
+  padding-top: 80px;
+  padding-left: 20px;
+  padding-right: 20px !important;
+  width: calc(100% - 517px);
+
+  margin-bottom: 69px;
+
+  @media screen and (min-width: 768px) {
+    align-items: center;
+    margin-top: 100px;
+    padding-top: 0;
+    padding-left: 32px;
+    padding-right: 0;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-top: 60px;
+    padding-left: 16px;
+  }
+
+  @media screen and (max-width: 768px) {
     flex-direction: column;
-    align-items: flex-start !important;
-    padding-top: 80px;
-    padding-left: 20px;
-    padding-right: 20px !important;
-    width: calc(100% - 517px);
-
-    margin-bottom: 69px;
-
-    @media screen and (min-width: 768px) {
-
-        align-items: center;
-        margin-top: 100px;
-        padding-top: 0;
-        padding-left: 32px;
-        padding-right: 0;
-    }
-
-    @media screen and (min-width: 1280px) {
-        margin-top: 60px;
-        padding-left: 16px;
-    }
-
-    @media screen and (max-width: 768px) {
-        flex-direction: column;
-        width: 100%;
-        margin-top: 80px;
-        margin-bottom: 60px;
-        padding: 0 20px;
-    }
+    width: 100%;
+    margin-top: 80px;
+    margin-bottom: 60px;
+    padding: 0 20px;
+  }
 }
 .FieldProduct {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
 
-    @media screen and (min-width: 768px) {
-        margin-right: 22px;
-        width: 240px;
-    }
+  @media screen and (min-width: 768px) {
+    margin-right: 22px;
+    width: 240px;
+  }
 }
 
 .FieldWeight {
-    position: relative;
-    width: 100%;
-    margin-top: 32px;
+  position: relative;
+  width: 100%;
+  margin-top: 32px;
 
-    @media screen and (min-width: 768px) {
-        margin-top: 0;
-        margin-right: 67px;
-        width: 107px;
-    }
+  @media screen and (min-width: 768px) {
+    margin-top: 0;
+    margin-right: 67px;
+    width: 107px;
+  }
 
-    @media screen and (min-width: 1280px) {
-        margin-right: 60px;
-    }
+  @media screen and (min-width: 1280px) {
+    margin-right: 60px;
+  }
 }
 
 .Label {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 0.3);
-    font-family: 'Verdana';
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 0.04em;
-    color: #9b9faa;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 0.3);
+  font-family: 'Verdana';
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.04em;
+  color: #9b9faa;
 }
 
 .Input {
-    display: inline-block;
-    height: 48px;
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid #e0e0e0;
-    color: #212121;
-    outline: none;
+  display: inline-block;
+  height: 48px;
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #e0e0e0;
+  color: #212121;
+  outline: none;
+  margin-bottom: 48px;
 
-    &:hover,
-    &:focus {
-        border-color: #fc842d;
-    }
+  &:hover,
+  &:focus {
+    border-color: #fc842d;
+  }
 
-    &:focus~label,
-    &:valid~label {
-        top: 0px;
-    }
+  &:focus ~ label,
+  &:valid ~ label {
+    top: 0px;
+  }
 
-    &::-webkit-outer-spin-button,
-    &::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-    }
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 
-    &[type='number'] {
-        -moz-appearance: textfield;
-    }
+  &[type='number'] {
+    -moz-appearance: textfield;
+  }
 }
 
 .LabelWeight {
-    left: 0;
+  left: 0;
 
-    @media screen and (min-width: 768px) {
-        left: auto;
-        right: 0;
-    }
+  @media screen and (min-width: 768px) {
+    left: auto;
+    right: 0;
+  }
 }
 
 .LabelTitle {
-    left: 0;
+  left: 0;
 }
 
 .InputWeight {
-    @media screen and (min-width: 768px) {
-        text-align: right;
-    }
+  @media screen and (min-width: 768px) {
+    text-align: right;
+  }
 
-    text-align: left;
+  text-align: left;
 }
 
 .button {
-    margin-top: 0;
-    padding: 0px;
-    width: 48px;
-    height: 48px;
-    background-color: #fc842d;
-    color: #ffffff;
-    border: none;
-    border-radius: 50%;
-    box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.3);
-    outline: none;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 0.3),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 0.3);
-    cursor: pointer;
+  margin-top: 0;
+  padding: 0px;
+  width: 48px;
+  height: 48px;
+  background-color: #fc842d;
+  color: #ffffff;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.3);
+  outline: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 0.3),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 0.3);
+  cursor: pointer;
 
-    &:enabled:hover,
-    &:enabled:focus {
-        color: #fc842d;
-        background-color: #ffffff;
-        border: 2px solid #fc842d;
-        box-shadow: none;
-    }
+  &:enabled:hover,
+  &:enabled:focus {
+    color: #fc842d;
+    background-color: #ffffff;
+    border: 2px solid #fc842d;
+    box-shadow: none;
+  }
 
-    &:disabled {
-        background-color: #fc842d50;
-        box-shadow: none;
-    }
+  &:disabled {
+    background-color: #fc842d50;
+    box-shadow: none;
+  }
 
-    & svg {
-        fill: currentColor;
-    }
+  & svg {
+    fill: currentColor;
+  }
 }
-
-
-.buttonAdd {
-    @media screen and (min-width: 768px) {
-        display: none;
-    }
-
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 80px;
-    width: 176px;
-    max-width: 176px;
-    height: 44px;
-    border-radius: 22px;
+.btn{
+margin-bottom: 60px;
 }
+// .buttonAdd {
+//   @media screen and (min-width: 768px) {
+//     display: none;
+//     margin-bottom: 60px;
+//   }
 
-.buttonIcon {
-    @media screen and (max-width: 767px) {
-        display: none;
-        margin-top: 60px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
+//   display: block;
+//   margin-right: auto;
+//   margin-left: auto;
+//   margin-top: 80px;
+//   width: 176px;
+//   max-width: 176px;
+//   height: 44px;
+//   border-radius: 22px;
+// }
 
+// .buttonIcon {
+//   @media screen and (max-width: 767px) {
+//     display: none;
+//     margin-top: 60px;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+// }
 
 .fieldRow {
-    display: flex;
-    flex-direction: row;
-    width: 400px;
+  display: flex;
+  flex-direction: row;
+  width: 400px;
+  align-items: center;
 
-    @media screen and (max-width: 768px) {
-        flex-direction: column;
-        width: 100%;
-    }
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 .Calendar {
-    display: flex;
-        gap: 21px;
-        width: 100%;
+  display: flex;
+  gap: 21px;
+  width: 100%;
 }
 
 .inputCalendar {
-    border: none;
-    outline: none;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 22px;
-    @media screen and (min-width: 768px) {
-        font-size: 34px;
-        line-height: 41px;
-        }
-    @media screen and (min-width: 1280px) {
+  border: none;
+  outline: none;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  @media screen and (min-width: 768px) {
     font-size: 34px;
     line-height: 41px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 34px;
+    line-height: 41px;
+  }
+}
 
-                }
-            }
-    
-          
+::placeholder {
+  color: #9b9faa;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(17 / 14);
+}
