--- a/src/components/DiaryProductList/DiaryProductList.module.scss
+++ b/src/components/DiaryProductList/DiaryProductList.module.scss
@@ -22,7 +22,7 @@
 .filteredList {
     // height: calc(100vh - 420px);
     //     max-height: calc(100vh - 420px);
-        padding-left: 16px;
+        // padding-left: 16px;
     background-color: #ffffff;
     margin-bottom: 60px;
 
