--- a/src/pages/DairyPage/DairyPage.module.scss
+++ b/src/pages/DairyPage/DairyPage.module.scss
@@ -15,7 +15,7 @@
     }
 }
 .container{
-    padding: 40px 20px 0px 20px;
+    // padding: 40px 20px 0px 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -34,5 +34,5 @@
 .dateContainer{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items:flex-start;
 }
