--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
@@ -32,7 +32,7 @@
 
   @media screen and (min-width: 1280px) {
     margin-top: 60px;
-    padding-left: 16px;
+    // padding-left: 16px;
   }
 
   @media screen and (max-width: 768px) {
@@ -197,6 +197,7 @@
   flex-direction: row;
   width: 400px;
   align-items: center;
+  align-items: flex-start;
 
   @media screen and (max-width: 768px) {
     flex-direction: column;
