--- a/src/components/DiaryProductListItem/DiaryProductListItem.module.scss
+++ b/src/components/DiaryProductListItem/DiaryProductListItem.module.scss
@@ -20,7 +20,7 @@
 
     height: 100%;
     flex-grow: 1;
-
+    max-width: 240px;
     border-bottom: 1px solid #E0E0E0;
 
     font-weight: 400;
@@ -34,6 +34,7 @@
 
     @media (max-width: 768px) {
         margin-right: 8px;
+        max-width: 24px;
     }
 }
 
