--- a/src/pages/DairyPage/DairyPage.module.scss
+++ b/src/pages/DairyPage/DairyPage.module.scss
@@ -36,3 +36,9 @@
     flex-direction: column;
     align-items:flex-start;
 }
+.userInfoContainer{
+    display: flex;
+    width: 100%;
+    background-color: #EFF1F3;
+    padding: 2px 0 2px 0;
+}
