--- a/src/components/DiaryProductListItem/DiaryProductListItem.module.scss
+++ b/src/components/DiaryProductListItem/DiaryProductListItem.module.scss
@@ -34,7 +34,7 @@ width: 130px;
 
     @media (max-width: 768px) {
         margin-right: 8px;
-        max-width: 24px;
+        // max-width: 24px;
     }
 }
 
