--- a/src/pages/CalculatorPage/CalculatorPage.module.scss
+++ b/src/pages/CalculatorPage/CalculatorPage.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-right: 20px;
   @media screen and (min-width: 768px) {
     display: none;
   }
