--- a/src/components/ModalSearchForm/ModalSearchForm.module.scss
+++ b/src/components/ModalSearchForm/ModalSearchForm.module.scss
@@ -20,15 +20,12 @@
   }  
 .container{
   background-color: #EFF1F3;
-  padding: 2px 0 2px 0;
+  padding: 2px 20px 2px 0;
   
 }
 .icon{
   position: absolute;
   top: 12px;
   left: 20px;
-
-  // padding: 20px 0 20px 20px;
-
 }
 
