--- a/src/components/Btn/Btn.module.scss
+++ b/src/components/Btn/Btn.module.scss
@@ -2,6 +2,7 @@
 
 .btn {
   background-color: var(--accent-color);
+  transition: all .5s ease;
   color: var(--btn-text-color);
   border-color: transparent;
   box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
@@ -9,7 +10,12 @@
   font-size: var(--text-size);
   text-align: center;
   line-height: 1.2;
-  
+  &:focus,
+  &:hover {
+    background-color: #ea4f0c;
+    box-shadow: 0px 4px 20px rgba(252, 132, 45, 0.5);
+    border-color: transparent;
+  }
 }
 
 .start {
@@ -18,6 +24,12 @@
   height: 43px;
   width: 210px;
   margin: 0 auto;
+  &:focus,
+ &:hover {
+    background-color: #ea4f0c;
+    box-shadow: 0px 4px 20px #ea4f0c;
+    border-color: transparent;
+  }
 }
 
 .login {
@@ -25,11 +37,22 @@
   border-radius: 30px;
   width: 182px;
   height: 44px;
+  &:focus,
+ &:hover {
+    background-color: #ea4f0c;
+    box-shadow: 0px 4px 20px #ea4f0c;
+    border-color: transparent;
+  }
 }
 .plus {
   composes: btn;
   width: 48px;
   height: 48px;
   border-radius: 50px;
-  margin:0 auto;
+  margin: 0 auto;
+  &:focus,
+  &:hover {
+    background-color: #ea4f0c;
+    box-shadow: 0px 4px 20px #ea4f0c;
+  }
 }
