--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
@@ -4,11 +4,11 @@
   justify-content: center;
 }
 .icon {
-  width: 20px;
-  height: 20px;
+  width: 23px;
+  height: 23px;
 }
-.Calendar{
-    display: flex;
+.Calendar {
+  display: flex;
 }
 
 .Form {
@@ -83,6 +83,8 @@
 }
 
 .Input {
+  padding: 5px;
+  line-height: normal;
   display: inline-block;
   height: 48px;
   width: 100%;
@@ -106,6 +108,7 @@
   &::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
+    padding: 10px;
   }
 
   &[type='number'] {
@@ -134,80 +137,22 @@
   text-align: left;
 }
 
-.button {
-  margin-top: 0;
-  padding: 0px;
-  width: 48px;
-  height: 48px;
-  background-color: #fc842d;
-  color: #ffffff;
-  border: none;
-  border-radius: 50%;
-  box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.3);
-  outline: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 0.3),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 0.3);
-  cursor: pointer;
-
-  &:enabled:hover,
-  &:enabled:focus {
-    color: #fc842d;
-    background-color: #ffffff;
-    border: 2px solid #fc842d;
-    box-shadow: none;
-  }
-
-  &:disabled {
-    background-color: #fc842d50;
-    box-shadow: none;
-  }
-
-  & svg {
-    fill: currentColor;
-  }
-}
-
-
 
 .btnMobil {
   margin-bottom: 60px;
 }
 
-// .buttonAdd {
-//   @media screen and (min-width: 768px) {
-//     display: none;
-//     margin-bottom: 60px;
-//   }
-
-//   display: block;
-//   margin-right: auto;
-//   margin-left: auto;
-//   margin-top: 80px;
-//   width: 176px;
-//   max-width: 176px;
-//   height: 44px;
-//   border-radius: 22px;
-// }
-
-// .buttonIcon {
-//   @media screen and (max-width: 767px) {
-//     display: none;
-//     margin-top: 60px;
-//     margin-left: auto;
-//     margin-right: auto;
-//   }
-// }
-
 .fieldRow {
   display: flex;
   flex-direction: row;
   width: 400px;
-  align-items: center;
-  align-items: flex-start;
+//  
+  margin-top: 60px;
 
   @media screen and (max-width: 768px) {
     flex-direction: column;
     width: 100%;
+    align-items: center;
   }
 }
 
@@ -233,7 +178,9 @@
   }
 }
 
-::placeholder {
+.Input::placeholder {
+  position: relative;
+  left: -5px;
   color: #9b9faa;
   font-weight: 700;
   font-size: 14px;
