--- a/src/components/DiaryProductList/DiaryProductList.module.scss
+++ b/src/components/DiaryProductList/DiaryProductList.module.scss
@@ -1,91 +1,62 @@
-// .List {
-//     width: 628px;
-//     height: calc(100vh - 420px);
-//     max-height: calc(100vh - 420px);
-//     padding-left: 16px;
-//     overflow-y: auto;
-
-//     @media (max-width: 1280px) {
-//         padding-left: 32px;
-//         height: 260px;
-//         max-height: 260px;
-//         // margin-bottom: 55px;
-//     }
-
-//     @media (max-width: 768px) {
-//         padding-left: 20px;
-//         padding-right: 20px;
-//         margin-bottom: 60px;
-//         width: 100%;
-//     }
-// }
 
 @media screen and (min-width: 1280px) {
-    .listContainer {
-        padding-left: 32px;
-    }
+ 
 }
 .filteredList {
-    margin-top: 20px;
-    // height: calc(100vh - 420px);
-    //     max-height: calc(100vh - 420px);
-        // padding-left: 16px;
-    background-color: #ffffff;
-    // margin-bottom: 60px;
+  margin-top: 20px;
 
+  background-color: #ffffff;
+  padding-left: 0px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin-bottom: 60px;
+
+
+  width: 100%;
+
+  @media screen and (min-width: 768px) {
+    max-width: 630px;
+    padding-left: 32px;
+    max-height: 260px;
+  }
+
+  @media (min-width: 1280px) {
+    max-width: 750px;
+  }
+
+  li {
     width: 100%;
+  }
 
-    @media screen and (min-width: 768px) {
-        width: 630px;
-    }
-         @media (max-width: 1280px) {
-             padding-left: 32px;
-            //  height: 260px;
-             max-height: 260px;
-            //  margin-bottom: 55px;
-         }
-    
-         @media (max-width: 768px) {
-            //  padding-left: 20px;
-            //  padding-right: 20px;
-            //  margin-bottom: 60px;
-            padding-left: 0;
-             width: 100%;
-         }
-    
+  // button {
+  //     padding: 8px;
+  //     border: none;
+  //     width: 100%;
 
-    li {
-        width: 100%;
-    }
+  //     color: #deb887;
+  //     background-color: transparent;
+  //     text-align: left;
+  //     cursor: pointer;
+  //     outline: none;
+  //     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // }
 
-    // button {
-    //     padding: 8px;
-    //     border: none;
-    //     width: 100%;
-
-    //     color: #deb887;
-    //     background-color: transparent;
-    //     text-align: left;
-    //     cursor: pointer;
-    //     outline: none;
-    //     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    // }
-
-    // button:focus,
-    // button:hover {
-    //     color: #fc842d;
-    // }
+  // button:focus,
+  // button:hover {
+  //     color: #fc842d;
+  // }
 }
-.notification{
-    color: #9b9faa;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(17 / 14);
+.notification {
+  color: #9b9faa;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(17 / 14);
 }
 
 .listContainer{
+    display: flex;
     padding-left: 0px;
     overflow-y: auto;
+    overflow-x: hidden;
+    margin-bottom: 60px;
 }
-
-
