--- a/src/components/DiaryDateCalendar/DiaryDataCalendar.module.scss
+++ b/src/components/DiaryDateCalendar/DiaryDataCalendar.module.scss
@@ -17,10 +17,12 @@ input[type="date"] {
 }
 
 input[type="date"]::-webkit-datetime-edit-day-field {
+  background: transparent;
   color: green;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
+  background: transparent;
   font-size: 30px;
 }
 
