--- a/src/components/SideBar/Sidebar.module.css
+++ b/src/components/SideBar/Sidebar.module.css
@@ -1,6 +1,6 @@
 .SidebarSection {
   width: 100%;
-  background-color: #F0F1F3;
+  background-color: var(--sidebgrColor);
   display: flex;
   flex-direction: column;
   gap: 60px;
@@ -15,7 +15,6 @@
     z-index: -1;
     top: 0;
     right: 0;
-    box-shadow: 40px 1px 55px #e2e2e2;
   }
 }
 
@@ -77,7 +76,7 @@
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.04em;
-  color: #212121;
+  color: var(--titleSideColor);
 }
 
 .SidebarText {
@@ -85,7 +84,7 @@
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.04em;
-  color: #9B9FAA;
+  color: var(--sidebarText);
 }
 
 .SidebarList {
