--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -1,4 +1,5 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+/* bring in normalize.css styles */
 
 * {
   box-sizing: border-box;
@@ -9,4 +10,8 @@ body {
   font-family: 'Arimo', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+input {
+  background: transparent;
 }
