--- a/src/components/DailyCaloriesForm/DailyCaloriesForm.module.scss
+++ b/src/components/DailyCaloriesForm/DailyCaloriesForm.module.scss
@@ -7,12 +7,14 @@
   max-width: 900px;
   padding: 32px 65px 0 20px;
   font-family: Verdana, Arial, sans-serif;
+
   @media screen and (min-width: 768px) {
     width: 704px;
     padding-top: 100px;
     padding-left: 32px;
     padding-right: 32px;
   }
+
   @media screen and (min-width: 1280px) {
     padding-top: 267px;
   }
@@ -22,9 +24,11 @@ div .form_button {
   display: block;
   text-align: center;
   margin-bottom: 40px;
+
   @media screen and (min-width: 768px) {
     text-align: left;
   }
+
   @media screen and (min-width: 1280px) {
     text-align: right;
     margin-right: 80px;
@@ -37,11 +41,12 @@ div .form_button {
   font-weight: bold;
   font-size: 18px;
   line-height: 1.4;
-  color: #212121;
+  color: var(--caloriesFormTitle);
   margin-bottom: 40px;
 }
 
 .caloriesForm label {
+  color: var(--caloriesFormLabel);
   display: block;
   padding-top: 5px;
   height: 25px;
@@ -68,21 +73,23 @@ div .form_button {
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.04em;
-  color: #9b9faa;
+  color: var(--caloriesForm);
   transition: all 0.3s;
+
   @media screen and (min-width: 768px) {
     width: 240px;
     padding-right: 32px;
   }
 }
 
-.caloriesForm input:focus ~ .labelText {
+.caloriesForm input:focus~.labelText {
   font-size: 12px;
   transform: translateY(-35px);
 }
 
-.caloriesForm input:valid ~ .labelText {
+.caloriesForm input:valid~.labelText {
   font-size: 12px;
+  color: var(--caloriesFormInput);
   transform: translateY(-35px);
 }
 
@@ -127,7 +134,7 @@ div .form_button {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.2;
-  color: #9b9faa;
+  color: var(--radioButtonContainer);
 }
 
 .radioButtonList {
@@ -200,15 +207,15 @@ div .form_button {
   margin: auto;
 }
 
-input[type='radio']:checked ~ .check {
+input[type='radio']:checked~.check {
   border: 1px solid #e0e0e0;
 }
 
-input[type='radio']:checked ~ .check::before {
+input[type='radio']:checked~.check::before {
   background: #fc842d;
 }
 
-input[type='radio']:checked ~ label {
+input[type='radio']:checked~label {
   font-weight: bold;
   color: #fc842d;
 }
