--- a/src/components/Layout/Burger/Burger.module.scss
+++ b/src/components/Layout/Burger/Burger.module.scss
@@ -5,6 +5,7 @@
   margin-right: 0;
   width: 24px;
   height: 24px;
+  background-color: transparent;
 }
 
 .close {
@@ -12,6 +13,7 @@
   height: 24px;
   margin-top: -2px;
 }
+
 @media screen and (min-width: 767px) {
   .btn {
     margin-right: 11px;
