--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -15,6 +15,7 @@
   transform: translateX(0);
   transition: transform 450ms ease;
 }
+
 .btnContainer {
   background-color: #eff1f3;
   width: 100%;
@@ -38,11 +39,12 @@
   text-align: center;
   padding-bottom: 42px;
 }
+
 .modalContainer {
-    padding: 40px 20px 0 20px;
-    display: flex;
-    flex-direction: column;
-  }
+  padding: 40px 20px 0 20px;
+  display: flex;
+  flex-direction: column;
+}
 
 @media screen and (min-width: 767px) {
   .overlay {
@@ -52,6 +54,7 @@
     width: 100%;
     height: 100%;
   }
+
   .modal {
     max-width: 672px;
     top: 50%;
@@ -70,7 +73,8 @@
     font-size: 26px;
     line-height: calc(36 / 26);
   }
-  .modalContainer{
+
+  .modalContainer {
     padding: 0;
   }
 }
@@ -80,6 +84,7 @@
   top: 15px;
   left: 20px;
 }
+
 .closeIcon {
   position: absolute;
   top: 20px;
@@ -135,5 +140,5 @@
   font-weight: 800;
   font-size: 14px;
   line-height: calc(17 / 14);
-  color: #9b9faa;
+  color: var(--modal);
 }
