--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -7,9 +7,11 @@
   text-transform: uppercase;
   padding-top: 18px;
 }
+
 .default {
-  color: #9b9faa;
+  color: var(--navigation);
 }
+
 .active {
   color: black;
 }
