--- a/src/components/SideBar/Sidebar.module.css
+++ b/src/components/SideBar/Sidebar.module.css
@@ -1,10 +1,10 @@
 .SidebarSection {
   width: 100%;
-  background-color: var(--sidebgrColor);
   display: flex;
   flex-direction: column;
   gap: 60px;
-
+  background-color: var(--sidebgrColor);
+  ;
 }
 
 @media screen and (min-width: 1280px) {
