--- a/src/pages/CalculatorPage/CalculatorPage.module.scss
+++ b/src/pages/CalculatorPage/CalculatorPage.module.scss
@@ -1,9 +1,11 @@
 .btnContainer {
-  background-color: #eff1f3;
+  background-color: var(--btnContainer);
+  // background-color: #eff1f3;
   width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-right: 20px;
+
   @media screen and (min-width: 768px) {
     display: none;
   }
