--- a/src/pages/DairyPage/DairyPage.module.scss
+++ b/src/pages/DairyPage/DairyPage.module.scss
@@ -15,13 +15,14 @@
     }
 }
 
-.container{
+.container {
     padding: 40px 20px 60px 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
-.btn{
+
+.btn {
     background-color: var(--accent-color);
     color: var(--btn-text-color);
     border-color: transparent;
@@ -32,14 +33,15 @@
     line-height: 1.2;
 }
 
-.dateContainer{
-margin-bottom: 32px;
-    
+.dateContainer {
+    margin-bottom: 32px;
+
 }
-.userInfoContainer{
+
+.userInfoContainer {
     display: flex;
     width: 100%;
-    background-color: #EFF1F3;
+    background-color: var(--userInfoContainer);
     padding: 2px 0 2px 0;
     padding-right: 20px;
 }
