--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -1,6 +1,3 @@
-@import-normalize;
-/* bring in normalize.css styles */
-
 * {
   box-sizing: border-box;
 }
@@ -10,8 +7,13 @@ body {
   font-family: 'Arimo', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--body);
 }
 
 input {
   background: transparent;
+}
+
+.MuiDateCalendar-root {
+  background-color: var(--muiDateCalendar);
 }
