--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,40 +1,52 @@
 :root {
     --main-text-color: #212121;
     --grey-text-color: #9B9FAA;
-    --btn-text-color: #FFFFFF;
     --accent-color: #FC842D;
     --text-size: 14px;
 }
 
 :root.themeLight {
+    --btn-text-color: #FFFFFF;
     --sidebgrColor: #F0F1F3;
     --titleSideColor: #212121;
     --sidebarText: #9B9FAA;
     --main-text-color: #212121;
-    --default: #9b9faa;
     --active: #212121;
-    --header: #fff;
-
+    --header: transparent;
+    --body: transparent;
+    --userInfoContainer: #EFF1F3;
+    --btnContainer: #EFF1F3;
+    --caloriesFormInput: #9B9FAA;
+    --radioButtonContainer: #9b9faa;
+    --caloriesForm: #9b9faa;
+    --caloriesFormLabel: #9b9faa;
+    --caloriesFormTitle: #000;
+    --notification: #949cb4;
+    --muiDateCalendar: #EFF1F3;
+    --switcher: transparent;
+    --navigation: #9b9faa;
+    --modal: #9b9faa;
 }
 
 :root.themeDark {
-    --bgColor: #424242;
+    --btn-text-color: #8d92a0;
+    --sidebgrColor: rgba(38, 64, 97, 0.5);
     --titleSideColor: #dbece9d8;
-    --sidebarText: #8ddc9f;
+    --sidebarText: #9cd4a8;
     --main-text-color: #e2d4d4;
-    --default: #575a5f;
     --active: #ebe5e5;
     --header: rgba(38, 64, 97, 0.6);
-
-    --greyTextColor: #e0e0e0;
-    --greyBgColor: #9b9faa;
-    --mainTextColor: #ffffff;
-    --accentColor: #fc842d;
-
-    --sidebgrColor: #264061;
-
-    --exitBtnColor: #e0e0e0;
-    --summaryBgColor: #424242;
-    --summaryTitleColor: #212121;
-    --summaryTextColor: #e0e0e0;
+    --body: rgba(38, 64, 97, 0.6);
+    --userInfoContainer: rgba(38, 64, 97, 0.2);
+    --btnContainer: rgba(38, 64, 97, 0.2);
+    --caloriesFormInput: #233468;
+    --radioButtonContainer: #233468;
+    --caloriesForm: #ccccf0;
+    --caloriesFormLabel: #ccccf0;
+    --caloriesFormTitle: #1c2f62;
+    --notification: rgba(15, 15, 16, 0.5);
+    --muiDateCalendar: #495d94;
+    --switcher: #ccc;
+    --navigation: #db7923;
+    --modal: #000;
 }
