--- a/src/components/Btn/Btn.module.scss
+++ b/src/components/Btn/Btn.module.scss
@@ -3,7 +3,7 @@
 .btn {
   background-color: var(--accent-color);
   transition: all .5s ease;
-  color: var(--btn-text-color);
+  color:#FFFFFF;
   border-color: transparent;
   box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
   font-weight: 700;
