--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -12,8 +12,6 @@
   align-items: center;
   background-color: rgba(33, 33, 33, 0.12);
   z-index: 1200;
-  transform: translateX(0);
-  transition: transform 450ms ease;
 }
 
 .btnContainer {
@@ -29,7 +27,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--btn-text-color);
+  background-color: #FFFFFF;
 }
 
 .title {
