--- a/src/components/ModalSearchForm/ModalSearchForm.module.scss
+++ b/src/components/ModalSearchForm/ModalSearchForm.module.scss
@@ -7,7 +7,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: #FFFFFF;
+    z-index: 1200;
  
   }
   .modal {
@@ -16,7 +17,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--btn-text-color);
+    background-color:#FFFFFF;
   }  
 .container{
   background-color: #EFF1F3;
