--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -21,6 +21,7 @@
       margin-top: -152px;
       height: auto;
       min-height: 100vh;
+      padding-bottom: 40px;
       background-image: url('../../images/background/desktop/leaves.png'),
         url('../../images/background/desktop/banana.png'),
         url('../../images/background/desktop/strawberry.png'),
